src/objects/EntitlementAssignment__c.object
<CustomObject>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <label>Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EntitlementName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entitlement Name</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Entitlement Assignments</relationshipLabel>
        <relationshipName>Entitlement_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <globalPicklist>Originator_Type</globalPicklist>
        <label>Originator Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>Profile Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <label>Role Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject_Type__c</fullName>
        <label>Subject Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group/Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Agent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <globalPicklist>Subtype</globalPicklist>
        <label>Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic1__c</fullName>
        <globalPicklist>Topic</globalPicklist>
        <label>Topic</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <type>Picklist</type>
    </fields>
    <label>Entitlement Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EntitlementName__c</columns>
        <columns>IsActive__c</columns>
        <columns>SortOrder__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CaseOrigin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>EntitlementName__c</columns>
        <columns>IsActive__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CaseOrigin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nick_personal</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>SortOrder__c</columns>
        <columns>CaseOrigin__c</columns>
        <columns>EntitlementName__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Topic1__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Nick personal</label>
    </listViews>
    <listViews>
        <fullName>Topic</fullName>
        <columns>NAME</columns>
        <columns>EntitlementName__c</columns>
        <columns>IsActive__c</columns>
        <columns>ProfileName__c</columns>
        <columns>RoleName__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CaseOrigin__c</columns>
        <filterScope>Everything</filterScope>
        <label>Topic</label>
    </listViews>
    <nameField>
        <displayFormat>EA-{000000000}</displayFormat>
        <label>Entitlement Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>